2012-04-11  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([test] utf-8-source): Use the encoded byte sequence of
	the Unicode string.

2012-04-10  Stas Boukarev  <stassats@gmail.com>

	* slime.el (def-slime-test utf-8-source): Define only when
	(and (featurep 'emacs) (>= emacs-major-version 23)).

2012-04-10  Stas Boukarev  <stassats@gmail.com>

	* slime.el (def-slime-test utf-8-source): Another try at fixing
	utf8 literals in code.

2012-04-09  Stas Boukarev  <stassats@gmail.com>

	* slime.el (def-slime-test utf-8-source): Remove literal Unicode
	characters in the form of \xFFFF, it causes problems for some
	people.

2012-04-07  Helmut Eller  <heller@common-lisp.net>

	Fix long lines.

	* swank.lisp:
	* slime.el:
	* ChangeLog:
	* swank-cmucl.lisp:
	* swank-lispworks.lisp:
	* contrib/ChangeLog
	* hyperspec.el
	* metering.lisp
	* swank-abcl.lisp
	* swank-allegro.lisp
	* swank-backend.lisp
	* swank-clisp.lisp
	* swank-corman.lisp
	* swank-ecl.lisp
	* swank-sbcl.lisp
	* swank-scl.lisp
	* swank-source-path-parser.lisp
	* xref.lisp

2012-04-06  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (interrupt-worker-thread): Interrupt the REPL thread if
	there are no threads found. Send Emacs an error message if no
	threads are found at all.

2012-03-30  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (lisp-source-location): When processing a
	STEP-FORM-CONDITION, don't show the initial form from expansion of
	STEP. (Currently SBCL doesn't give the form at all, but when it
	does seeing it is distinctly useless.)

2012-03-26  Helmut Eller  <heller@common-lisp.net>

	* slime.el (utf-8-source): XEmacs has no set-buffer-multibyte.
	(slime-create-test-results-buffer): Set file-coding-system.

	* swank-lispworks.lisp (swank-compile-string): Don't include the
	source-string in the dspec::*location*.  As LW has the habbit to
	print the entire *location* on redefinition the source-string
	would causes troubles for the test case.
